--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="todos">
         <div class="heading">
-            <h1>My Todo List(Quollab Task-1)</h1>
+            <h1>My Todo List</h1>
         </div>
 
         <div>
